--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
         <a href="https://www.linkedin.com/in/ananthan-m-8b149727a/" target="_blank" class="w-12 h-12 rounded-full bg-gray-800 hover:bg-blue-700 flex items-center justify-center transition">
           <i class="fab fa-linkedin-in text-xl font-bold text-white"></i>
         </a>
+        <!-- GitHub -->
+        <a href="https://github.com/JOKAPER-21" target="_blank" class="w-12 h-12 rounded-full bg-gray-800 hover:bg-gray-700 flex items-center justify-center transition">
+          <i class="fab fa-github text-xl font-bold text-white"></i>
+        </a>
       </div>
     </div>
   </section>
