--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <a href="index.html" class="text-blue-500">HOME</a> 
         <a href="personal.html" class="text-gray-300 hover:text-white transition">PORTFOLIO</a> 
         <a href="https://jokaper-21.github.io/LinkHub/" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition">LINKHUB</a>
+        <a href="https://github.com/JOKAPER-21/SCeasar" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition">TOOLS</a>
         <!-- <a href="resume.html" class="text-gray-300 hover:text-white transition">RESUME</a>  -->
       </div>
   
@@ -78,10 +79,6 @@
         <!-- LinkedIn -->
         <a href="https://www.linkedin.com/in/ananthan-m-8b149727a/" target="_blank" class="w-12 h-12 rounded-full bg-gray-800 hover:bg-blue-700 flex items-center justify-center transition">
           <i class="fab fa-linkedin-in text-xl font-bold text-white"></i>
-        </a>
-        <!-- GitHub -->
-        <a href="https://github.com/JOKAPER-21" target="_blank" class="w-12 h-12 rounded-full bg-gray-800 hover:bg-neutral-950 flex items-center justify-center transition">
-          <i class="fab fa-github text-xl font-bold text-white"></i>
         </a>
       </div>
     </div>
