updated all nav tools

--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,7 @@
         <a href="index.html" class="text-gray-300 hover:text-white transition">HOME</a>
         <a href="personal.html" class="text-gray-300 hover:text-white transition">PORTFOLIO</a>
         <a href="https://jokaper-21.github.io/LinkHub/" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition">LINKHUB</a>
+        <a href="https://github.com/JOKAPER-21/SCeasar" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition">TOOLS</a>
         <!-- <a href="resume.html" class="text-gray-300 hover:text-white transition">RESUME</a>  -->
       </div>
 
