--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       
       <!-- Logo -->
       <div>
-        <a href="index.html" class="text-3xl font-bold text-white hover:text-blue-500 transition">OCTAPETRIX</a>
+        <a href="index.html" class="text-3xl font-bold text-white hover:text-blue-500 transition">JOKAPER 21</a>
       </div>
   
       <!-- Burger Icon -->
