--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <div class="max-w-7xl mx-auto flex items-center justify-between p-6 relative">
       <!-- Logo -->
       <div>
-        <a href="index.html" class="text-3xl font-bold text-white hover:text-blue-500 transition">OCTAPETRIX</a>
+        <a href="index.html" class="text-3xl font-bold text-white hover:text-blue-500 transition">JOKAPER 21</a>
       </div>
 
       <!-- Burger Icon -->
