--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
           <i class="fab fa-instagram text-xl font-bold text-white"></i>
         </a>
         <!-- CGTrader -->
-        <a href="https://www.cgtrader.com/designers/octapetrix" target="_blank" class="w-12 h-12 rounded-full bg-gray-800 hover:bg-green-500 flex items-center justify-center transition">
-          <i class="fas fa-cube text-xl font-bold text-white"></i> <!-- using cube icon as CGTrader icon alt -->
-        </a>
+        <!--<a href="https://www.cgtrader.com/designers/octapetrix" target="_blank" class="w-12 h-12 rounded-full bg-gray-800 hover:bg-green-500 flex items-center justify-center transition"> -->
+          <!--<i class="fas fa-cube text-xl font-bold text-white"></i> <!-- using cube icon as CGTrader icon alt -->
+        <!--</a> -->
         <!-- YouTube -->
         <a href="https://www.youtube.com/@jokaper21" target="_blank" class="w-12 h-12 rounded-full bg-gray-800 hover:bg-red-600 flex items-center justify-center transition">
           <i class="fab fa-youtube text-xl font-bold text-white"></i>
